--- a/tomas/project2tour/3md_bio.css
+++ b/tomas/project2tour/3md_bio.css
@@ -1,14 +1,14 @@
-.bg {
+/*.bg {
   /* Set rules to fill background */
-  min-height: 100%;
+  /*min-height: 100%;
   min-width: 1200px;
 	
   /* Set up proportionate scaling */
-  width: 100%;
+  /*width: 100%;
   height: auto;
 	
   /* Set up positioning */
-  position: fixed;
+  /*position: fixed;
   top: 0;
   left: 0;
   background: url("http://www-tc.pbs.org/art21/files/images/dion-mark.jpg") no-repeat center center fixed; 
@@ -23,7 +23,7 @@
 .bg::after {
   content: url(http://www.truevalueofawoman.com/wp-content/uploads/2013/02/purple-gradient-32.jpg);
   opacity: .3;
-}
+} */
 
 .bio {
  margin-bottom: 100px;
@@ -31,12 +31,14 @@
   max-width: 1200px;
   z-index: 10;
   position: absolute;
+  text-align: center;
+  
 }
 
 p {
-  color: #FFFFF8;
+  color: #666664;
   /*color: rgba(255, 125,86,1);*/
-  font-family: futura;
-  font-size: 3.3em;
+  font-family: 'georgia';
+  font-size: 2em;
   z-index: 15;
 }
